--- a/第２回目コーディング課題２_戸髙/css/style.css
+++ b/第２回目コーディング課題２_戸髙/css/style.css
@@ -47,22 +47,22 @@ img {
 
 nav{
     display: flex;
-    justify-content: space-around;
     align-items: center;
     list-style: none;
 }
 
 .logo {
     font-size:20px;
-    margin-top: 10px;
+    margin: 30px;
+    float:left;
+
 }
 
 .nav-links{
     display: flex;
     justify-content: space-around;
+    margin-top: 25px;
 }
-
-
 
 
 .nav-links li {
@@ -70,6 +70,7 @@ nav{
     padding: 10px 15px;
     border-right: 1px solid black;
     margin-top: 10px;
+    
 }
 
 .nav-links li:last-child{
@@ -79,22 +80,24 @@ nav{
 @media screen and (max-width:767px){
         
 .logo {
-        margin:20px auto 60px 15px;
+        margin:20px auto 0px 15px;
         margin-top:15px;
         font-size:20px;
+        float:none;
     }
 
+.nav {
+        display:block;
+
+}
 .nav-links{
-    left:0;
-    position: absolute;
-    top:50px;
-    flex-direction: column;
+    display:block;
+    padding:0 10px;
+
 }
 .nav-links li {
-    border-left: none;
+    border-right: none;
     border-bottom:1px solid black;
     width: 600px;
-
-
     }
 }
