--- a/第２回目コーディング課題２_戸髙/css/style.css
+++ b/第２回目コーディング課題２_戸髙/css/style.css
@@ -43,24 +43,19 @@ img {
 .wrap {
     max-width: 980px;
     margin: 0 auto;
-}
-
-nav{
     display: flex;
-    align-items: center;
-    list-style: none;
+    justify-content: space-between;
+    
 }
 
 .logo {
     font-size:20px;
     margin: 30px;
-    float:left;
 
 }
 
 .nav-links{
     display: flex;
-    justify-content: space-around;
     margin-top: 25px;
 }
 
@@ -78,18 +73,18 @@ nav{
 }
 
 @media screen and (max-width:767px){
-        
+    
+.wrap{    display:block;
+}
+
+
 .logo {
         margin:20px auto 0px 15px;
         margin-top:15px;
         font-size:20px;
-        float:none;
+    
     }
 
-.nav {
-        display:block;
-
-}
 .nav-links{
     display:block;
     padding:0 10px;
