--- a/CAFESITE/css/style.css
+++ b/CAFESITE/css/style.css
@@ -54,8 +54,15 @@ img {
 body{
 
     background-color: #e8d9bf;
+    position: relative;
 }
 
+.all{
+    position: absolute;
+    top:0;
+    left:0;
+
+ }
 
 
 
@@ -369,46 +376,37 @@ dd{
     display: flex;
 }
 
-.closing_left{
-    width:30%
-}
 
 .closing_word img{
     margin-top: 50px;
-    margin-left: 24%;
+    margin-left: 46%;
     width:227px;
-
 }
 
 
-.closing_center{
-    width:50%
-}
 .closing_info{
-    margin-top: 50px;
-    margin-left:6.5% ;
+    padding-top: 50px;
+    margin: 0 auto;
     font-size: 20px;
     line-height:195%;
 }
 
 
-.closing_right{
-    width:20%;
-    margin-top: 38px;
-}
-
 html{
     scroll-behavior: smooth;
 }
 
+
 .bottom{
+    max-width: 1000px;
     position: fixed;
-    bottom:20px;
-    right:20px;
+    bottom:22.8px;
+    right:30px;
 }
 
 .bottom img{
     width: 125px;
+    
 }
 
 .copyright{
